--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,6 @@
 
 @import url(/src/css/utils/variable.css);
 
+/** Fonts **/
+
+@import url(https://db.onlinewebfonts.com/c/dd2c3e93d1b39581d84483c4ba986298?family=Coluna);
