footer html + css + jaa

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,3 +26,4 @@
 /** Fonts **/
 
 @import url(https://db.onlinewebfonts.com/c/dd2c3e93d1b39581d84483c4ba986298?family=Coluna);
+@import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
