reglage de certain probleme sur l'accueil + boutton langue + accueil anglais

--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -83,3 +83,9 @@ header langue {
     margin-left: 100px;
 }
 
+.langue__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: -250px;
+}   
