--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -65,7 +65,7 @@ margin-bottom: -20px;
 }
 
 .main__description {
-    padding: 20px;
+    padding: 30px;
     color: #555;
     font-family: "Open Sans";
     font-size: 14px;
@@ -107,7 +107,7 @@ margin-bottom: -20px;
 }
 
 .description {
-    padding: 60px;
+    padding: 30px;
     color: #555;
     font-family: "Open Sans";
     font-size: 14px;
@@ -115,4 +115,14 @@ margin-bottom: -20px;
     line-height: normal;
     margin-bottom: 5px;
     margin-top: -90px;
+}
+
+.image_film {
+    border-radius: 8px;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
