--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -5,7 +5,16 @@ img {
 
 .trailer {
     border-radius: 8px;
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     display: block;
+    margin-left: 10%;
 }
+
+.img_film, .img_real, .img_musique , .img {
+    max-width: 80%;
+    margin-left: 10%;
+}
+
+
+
