--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -353,3 +353,11 @@ a {
 .btn-return:hover {
     background-color: #C9481D;
 }
+
+.legende {
+    font-size: 12px;
+    color: #555;
+    margin-bottom: 40px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+}
